# PLDA

./: .gitlab-ci.yml  CMakeLists.txt  README  README.md  main.cpp
chtk/: CMakeLists.txt  chtk.cpp  chtk.h
cmake/: FindAtlas.cmake  FindGraphviz.cmake  FindKaldi.cmake  FindLapack.cmake  FindLibCPPA.cmake  FindOpenBLAS.cmake  cmake_uninstall.cmake.in
python/: CMakeLists.txt  setup.py.in  test.py
python/liblda/: __init__.py  lda.py  plda.py
python/libplda/: __init__.py  plda.py
scoring/: .gitmodules  eer.py  extractdvector.py  scoreLDA.py  scorePLDA.py
src/: CovarianceStats.cpp  CovarianceStats.hpp  LDA.cpp  LDA.hpp  PLDA.cpp  PLDA.hpp  kaldi-utils.cpp  kaldi-utils.hpp  ldamodule.cpp  pldamodule.cpp
tests/: ldacomp.py  ldatest.py  pldatest.py  tmp
